<resources>
    <string name="app_name">89 bhp</string>
    <string name="live_data_service_description">Fetches vehicle data from connected OBD adapter.</string>
    <string name="cancel">Cancel</string>
    <string name="offline">You are offline</string>
    <string name="oxygen">&oxygen;</string>
    <string name="connected_to" formatted="false">Connected to %s</string>
    <string name="connecting_to" formatted="false">Connecting to %s…</string>
    <string name="connection_lost" formatted="false">Connection to %s lost</string>
    <string name="connectivity">Connectivity</string>
    <string name="bluetooth_connection_status" formatted="false">Bluetooth: %s</string>
    <string name="obd_connection_status" formatted="false">OBD Adapter: %s</string>
    <string name="connectivity_tips">&#8226; Make sure that your phone is connected to the OBD adapter via Bluetooth\n</string>
    <string name="bluetooth_permission_request_rationale">If you deny granting the permission again, 89 bhp won\'t be able to communicate with your vehicle using an OBD adapter. All functionalities including fetching live data and scanning for trouble codes need this permission to work. We will also respect your decision and the \'&grant_permission;\' button below will stop working and you\'ll have to go to app settings to grant the permission.</string>
    <string name="bluetooth_permission_request">89 bhp requires Bluetooth permission to connect to OBD adapter. No location data is collected by the app. Please grant the permission</string>
    <string name="bluetooth_connected" formatted="false">Connected to %s</string>
    <string name="bluetooth_connect_failed" formatted="false">Unable to connect to \'%s\'.\nReason: %s</string>
    <string name="connection_step_1_instructions">1. Turn <b>OFF</b> your vehicle\'s ignition.\n\n2. Connect an <b>ELM327 Bluetooth OBD</b> adapter to your vehicle\'s <b>OBD port</b>.
    The adapter can be bought from any online shopping site for as low as 7 USD. If you don\'t know the location of the port, please perform a Google search using your vehicle\'s make and model.\n\n3. Turn <b>ON</b> your vehicle\'s ignition.
    The engine may or may not be running. While scanning for trouble codes the engine should not be running.\n\n4. Proceed to the next step.</string>
    <string name="bluetooth_off">89 bhp requires Bluetooth to connect to OBD adapter. Currently Bluetooth is turned OFF.</string>
    <string name="turn_bluetooth_on">Turn Bluetooth on</string>
    <string name="paired_device_connected_hint" formatted="false">89 bhp is now connected to \'%s\'. Proceed to the next step. If the connected device is not the OBD adapter, please
    select one from the list. If your adapter is not present in the list, please <b>pair</b> it by clicking the \'Pair\' button below.</string>
    <string name="no_paired_device_connected_hint">Please select a paired OBD adapter from the list below. It will usually have \'OBD\' in its name. If not found, please <b>pair</b>
    an adapter by clicking the \'Pair\' button below.</string>
    <string name="pair">Pair</string>
    <string name="obd_adapter">OBD Adapter</string>
    <string name="vehicle_ecu">Vehicle ECU</string>
    <string name="colon" translatable="false">:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connection_successful">89 bhp is now connected to your vehicle. Have fun!</string>
    <string name="unsupported_parameter">This parameter is not supported by your vehicle\'s ECU</string>
    <string name="connect">Connect</string>
    <string name="o1_b1">&oxygen; Sensor 1: Present at Bank 1</string>
    <string name="o2_b1">&oxygen; Sensor 2: Present at Bank 1</string>
    <string name="o3_b1">&oxygen; Sensor 3: Present at Bank 1</string>
    <string name="o4_b1">&oxygen; Sensor 4: Present at Bank 1</string>
    <string name="o1_b2">&oxygen; Sensor 1: Present at Bank 2</string>
    <string name="o2_b2">&oxygen; Sensor 2: Present at Bank 2</string>
    <string name="o3_b2">&oxygen; Sensor 3: Present at Bank 2</string>
    <string name="o4_b2">&oxygen; Sensor 4: Present at Bank 2</string>
    <string name="fuel_status_not_running">Fuel system status: Engine is not running</string>
    <string name="fuel_status_1">Fuel system 1 status</string>
    <string name="fuel_status_2">Fuel system 2 status</string>
    <string name="fuel_system_open_loop">Open loop - has not yet satisfied conditions to go closed loop</string>
    <string name="fuel_system_closed_loop">Closed loop - using &oxygen; sensor(s) as feedback for fuel control</string>
    <string name="fuel_system_open_loop_driving_cond">Open loop due to driving conditions (e.g. power enrichment, deceleration enleanment)</string>
    <string name="fuel_system_open_loop_fault">Open loop due to detected system fault</string>
    <string name="fuel_system_closed_loop_fault">Closed loop, but fault with at least one &oxygen;
        sensor - maybe using single &oxygen; sensor for fuel control</string>
    <string name="no_data" translatable="false">NO DATA</string>
    <string name="mil_engine_run_time">Time run by engine while check engine light is activated (min)</string>
    <string name="time_run_since_dtc_cleared">Time run by engine since diagnostic trouble codes cleared (min)</string>
    <string name="engine_total_run_time">Total engine run time (hrs)</string>
    <string name="engine_total_idle_time">Total idle run time (hrs)</string>
    <string name="distance_mil_on">Distance travelled while check engine light is activated</string>
    <string name="warm_ups_since_dtc_cleared">Number of warm-ups since diagnostic trouble codes cleared</string>
    <string name="distance_since_dtc_cleared">Distance since diagnostic trouble codes cleared</string>
    <string name="maf_a_supported">MAF Sensor A: Supported</string>
    <string name="maf_b_supported">MAF Sensor B: Supported</string>
    <string name="ect_1_supported">Engine coolant temperature sensor 1: Supported</string>
    <string name="ect_2_supported">Engine coolant temperature sensor 2: Supported</string>
    <string name="frp_atmos">Fuel rail pressure at engine referenced to atmosphere</string>
    <string name="intake_mani_abs_pres">Intake manifold absolute pressure</string>
    <string name="rpm" translatable="false">RPM</string>
    <string name="vehicle_speed">Vehicle speed</string>
    <string name="ign_timing_advance_1">Ignition timing advance for #1 cylinder</string>
    <string name="intake_air_temperature">Intake air temperature</string>
    <string name="stft_b2_s3">Short term fuel trim (Bank 2 Sensor 3)</string>
    <string name="oxygen_sensor_b2_s3">&oxygen; sensor (Bank 2 Sensor 3)</string>
    <string name="stft_b2_s4">Short term fuel trim (Bank 2 Sensor 4)</string>
    <string name="oxygen_sensor_b2_s4">&oxygen; sensor (Bank 2 Sensor 4)</string>
    <string name="wide_range_o2_b2_s3">Wide range &oxygen; sensor (Bank 2 Sensor 3)</string>
    <string name="wide_range_o2_b2_s4">Wide range &oxygen; sensor (Bank 2 Sensor 4)</string>
    <string name="egr_valve_flow">EGR valve flow</string>
    <string name="evaporative_purge_flow">Evaporative purge flow</string>
    <string name="fuel_level">Fuel level</string>
    <string name="equi_ratio_b2_s3">Equivalence ratio (Bank 2 Sensor 3)</string>
    <string name="equi_ratio_b2_s4">Equivalence ratio (Bank 2 Sensor 4)</string>
    <string name="cat_temp_b1_s1">Catalyst temperature (Bank 1 Sensor 1)</string>
    <string name="cat_temp_b2_s1">Catalyst temperature (Bank 2 Sensor 1)</string>
    <string name="cat_temp_b1_s2">Catalyst temperature (Bank 1 Sensor 2)</string>
    <string name="cat_temp_b2_s2">Catalyst temperature (Bank 2 Sensor 2)</string>
    <string name="engine_load">Engine load</string>
    <string name="engine_oil_temp">Engine oil temperature</string>
    <string name="fi_timing">Fuel injection timing</string>
    <string name="engine_fuel_rate">Engine fuel rate</string>
    <string name="engine_coolant_temp">Engine coolant temperature</string>
    <string name="ltft_b1">Long term fuel trim (Bank 1)</string>
    <string name="ltft_b2">Long term fuel trim (Bank 2)</string>
    <string name="maf_rate">Mass air flow rate</string>
    <string name="absolute_throttle_position">Absolute throttle position</string>
    <string name="stft_b1_s1">Short term fuel trim (Bank 1 Sensor 1)</string>
    <string name="oxygen_sensor_b1_s1">&oxygen; sensor (Bank 1 Sensor 1)</string>
    <string name="stft_b1_s2">Short term fuel trim (Bank 1 Sensor 2)</string>
    <string name="oxygen_sensor_b1_s2">&oxygen; sensor (Bank 1 Sensor 2)</string>
    <string name="stft_b1_s3">Short term fuel trim (Bank 1 Sensor 3)</string>
    <string name="oxygen_sensor_b1_s3">&oxygen; sensor (Bank 1 Sensor 3)</string>
    <string name="stft_b1_s4">Short term fuel trim (Bank 1 Sensor 4)</string>
    <string name="oxygen_sensor_b1_s4">&oxygen; sensor (Bank 1 Sensor 4)</string>
    <string name="stft_b2_s1">Short term fuel trim (Bank 2 Sensor 1)</string>
    <string name="oxygen_sensor_b2_s1">&oxygen; sensor (Bank 2 Sensor 1)</string>
    <string name="stft_b2_s2">Short term fuel trim (Bank 2 Sensor 2)</string>
    <string name="oxygen_sensor_b2_s2">&oxygen; sensor (Bank 2 Sensor 2)</string>
    <string name="frp_mani_vac">Fuel rail pressure relative to manifold vacuum</string>
    <string name="frp_gdi_diesel">Fuel rail pressure for GDI and diesel engines</string>
    <string name="wide_range_o2_b1_s1">Wide range &oxygen; sensor (Bank 1 Sensor 1)</string>
    <string name="wide_range_o2_b1_s2">Wide range &oxygen; sensor (Bank 1 Sensor 2)</string>
    <string name="wide_range_o2_b1_s3">Wide range &oxygen; sensor (Bank 1 Sensor 3)</string>
    <string name="wide_range_o2_b1_s4">Wide range &oxygen; sensor (Bank 1 Sensor 4)</string>
    <string name="wide_range_o2_b2_s1">Wide range &oxygen; sensor (Bank 2 Sensor 1)</string>
    <string name="wide_range_o2_b2_s2">Wide range &oxygen; sensor (Bank 2 Sensor 2)</string>
    <string name="evap_system_vap_pres">Evap system vapour pressure</string>
    <string name="barometric_pres">Barometric pressure</string>
    <string name="equi_ratio_b1_s1">Equivalence ratio (Bank 1 Sensor 1)</string>
    <string name="equi_ratio_b1_s2">Equivalence ratio (Bank 1 Sensor 2)</string>
    <string name="equi_ratio_b1_s3">Equivalence ratio (Bank 1 Sensor 3)</string>
    <string name="equi_ratio_b1_s4">Equivalence ratio (Bank 1 Sensor 4)</string>
    <string name="equi_ratio_b2_s1">Equivalence ratio (Bank 2 Sensor 1)</string>
    <string name="equi_ratio_b2_s2">Equivalence ratio (Bank 2 Sensor 2)</string>
    <string name="battery_ecu_voltage">Battery/ Control module voltage</string>
    <string name="abs_load_value">Absolute load value</string>
    <string name="language">Language</string>
    <string name="toggle_hud">Toggle HUD</string>
    <string name="distance">Distance</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="units">Units</string>
    <string name="gauge">Gauge</string>
    <string name="gauge_operations">Gauge Operations</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="add_gauge">Add gauge</string>
    <string name="dtc_title">Diagnostic trouble code: </string>
    <string name="type">Type:</string>
    <string name="can_be_ignored">Can be ignored?</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="permanent">Permanent</string>
    <string name="freeze_frame">Freeze Frame</string>
    <string name="details">Details</string>
    <string name="start_scan">Start Scan</string>
    <string name="start_scan_hint">Make sure  that the:\n1. Ignition is ON\n2. Engine is NOT running</string>
    <string name="scan_result">Scan Result</string>
    <string name="clear_codes">Clear Codes</string>
</resources>