<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
>
    <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_title_height"
                android:background="@color/purple_200">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtcTitleTextView"
                    android:text="@string/dtc_title" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textColor="#FFFFFFFF" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/obdCodeTextView"
                    tools:text="P0130"
                    android:textColor="#FFFFFF" app:layout_constraintStart_toEndOf="@+id/dtcTitleTextView"
                    android:layout_marginStart="8dp" android:textSize="18sp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/typeTitleTextView"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/ignoredTitleTextView" android:layout_marginTop="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/typeTextView"
                    app:layout_constraintTop_toTopOf="@+id/typeTitleTextView" tools:text="@string/confirmed"
                    app:layout_constraintStart_toStartOf="@+id/ignoredTextView" android:textStyle="bold"/>
            <TextView
                    android:text="@string/can_be_ignored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ignoredTitleTextView"
                    app:layout_constraintStart_toStartOf="@+id/typeTitleTextView" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/typeTitleTextView"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/ignoredTextView"
                    tools:text="No"
                    app:layout_constraintTop_toTopOf="@+id/ignoredTitleTextView"
                    app:layout_constraintStart_toEndOf="@+id/ignoredTitleTextView" android:layout_marginStart="8dp"
                    android:textStyle="bold" android:textColor="#FF0000"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/freeze_frame"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/freezeFrameButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/detailsButton"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" tools:visibility="visible"
                    app:backgroundTint="@color/freeze_frame_blue" android:layout_marginStart="8dp"/>
            <Button
                    android:text="@string/details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/detailsButton"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/freezeFrameButton"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>