<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        >


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/scan_result"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card_title_height" android:id="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" tools:text="Scan Result"
                    android:background="@color/purple_200" android:textColor="@android:color/white"
                    android:gravity="center_vertical" android:paddingLeft="8dp"/>
            <TextView
                    android:text="@string/confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirmedTextView" tools:text="556777" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    />
            <TextView
                    android:text="@string/pending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView9"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/pendingTextView"
                    app:layout_constraintEnd_toEndOf="@+id/confirmedTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9" tools:text="2555"
                    />
            <TextView
                    android:text="@string/permanent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView11"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/permanentTextView"
                    app:layout_constraintEnd_toEndOf="@+id/pendingTextView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11" tools:text="2356346"
                    />
            <Button
                    android:text="@string/clear_codes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/clearCodesButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"

            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_info_outline"
                    android:id="@+id/confirmedInfoView"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/pendingInfoView"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_info_outline"
                    android:id="@+id/pendingInfoView"
                    app:layout_constraintStart_toStartOf="@+id/permanentInfoView"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
            />
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_info_outline"
                    android:id="@+id/permanentInfoView" app:layout_constraintStart_toEndOf="@+id/textView11"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>